--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section id="imagem">
         <h2>&lt;img&gt; - Imagem</h2>
         <p>Usado para exibir imagens:</p>
-        <img src="/images.jpeg" alt="Exemplo de imagem" width="300">
+        <img src="images.jpeg" alt="Exemplo de imagem" width="300">
     </section>
     
     <section id="lista">
@@ -54,7 +54,7 @@
     <section id="details">
         <h2>&lt;details&gt; - detalhes</h2>
         <details>
-            <img src="/images (1).jpeg" alt="">
+            <img src="images (1).jpeg" alt="">
         </details>
         <p>serve pra esconder algo</p>
     </section>
